sensor specifications added

--- a/g5-documentation.tex
+++ b/g5-documentation.tex
@@ -18,6 +18,7 @@
 	\input{systemdescription/CAN-bus}
 
 	\chapter{Specifications}
+	\input{specifications/sensorreadings.tex}
 	% Kracspecifikation
 
 	\chapter{Systemdevelopment}
