Starting documentations for all of electronics
blarg

--- a/g5-documentation.tex
+++ b/g5-documentation.tex
@@ -16,9 +16,10 @@
 
 	\chapter{Systemdescription}
 	\input{systemdescription/CAN-bus}
+	\input{systemdev/block1/block1}
 
 	\chapter{Specifications}
-	\input{specifications/sensorreadings.tex}
+	%\input{specifications/sensorreadings.tex}
 	% Kracspecifikation
 
 	\chapter{Systemdevelopment}
