new sensor refresh rates

--- a/preamble.tex
+++ b/preamble.tex
@@ -15,6 +15,7 @@
 \usepackage{natbib}							% Til referencer hører sammen med \bibliographystyle
 \usepackage{listings}						% Præsentering af kode
 \usepackage{booktabs}
+\usepackage{rotating}
 
 % Setup af dokumentet:
 \chapterstyle{ell}
