Sensorreading table is now in landscape mode

--- a/g5-documentation.tex
+++ b/g5-documentation.tex
@@ -19,7 +19,7 @@
 	\input{systemdev/block1/block1}
 
 	\chapter{Specifications}
-	%\input{specifications/sensorreadings.tex}
+	\input{specifications/sensorreadings.tex}
 	% Kracspecifikation
 
 	\chapter{Systemdevelopment}
