--- a/preamble.tex
+++ b/preamble.tex
@@ -16,6 +16,7 @@
 \usepackage{listings}						% Præsentering af kode
 \usepackage{booktabs}
 \usepackage{rotating}
+\usepackage{pdflscape}
 
 % Setup af dokumentet:
 \chapterstyle{ell}
