--- a/specifications/sensorreadings.tex
+++ b/specifications/sensorreadings.tex
@@ -1,7 +1,7 @@
 \chapter{Sensor requirement}
 
-
-\begin{sidewaystable}[htbp]
+\begin{landscape}
+\begin{table}[htbp]
 \centering
 %\footnotesize
 \begin{tabular} {l @{}c @{}c @{}c @{}c @{}c @{}c @{}c@{}}
@@ -32,10 +32,12 @@ Tyre temperature & degrees	& degrees	& 8bit 	& 5		&  xx			& Morten Jessen			& 3 
 \end{tabular}
 \caption{Caption example.}
 \label{tab:label_example}
-\end{sidewaystable}
-
+\end{table}
 
 * CG = Center of gravity 
 
 To do 
-want to know thottle 
+want to know throttle 
+
+\end{landscape}
+
