changed to lanscape

--- a/specifications/sensorreadings.tex
+++ b/specifications/sensorreadings.tex
@@ -4,7 +4,7 @@
 \begin{table}[htbp]
 \centering
 %\footnotesize
-\begin{tabular} {l @{}c @{}c @{}c @{}c @{}c @{}c @{}c@{}}
+\begin{tabular} {l c c c c c c c }
 \toprule
 sensor & min	& max 	& resolution 	& refresh rate [Hz]	& placement 	& source of requirement & note	\\
 \midrule
