chaneged block1 folder to 1display and added modes to display

--- a/g5-documentation.tex
+++ b/g5-documentation.tex
@@ -16,7 +16,7 @@
 
 	\chapter{Systemdescription}
 	\input{systemdescription/CAN-bus}
-	\input{systemdev/block1/block1}
+	\input{systemdev/1display/display2,0.tex}
 
 	\chapter{Specifications}
 	\input{specifications/sensorreadings.tex}
