fixed some bugs

--- a/systemdev/1display/display2,0.tex
+++ b/systemdev/1display/display2,0.tex
@@ -4,7 +4,7 @@ This explains the display
 \begin{figure}
 	\begin{center}
 		\includegraphics[scale=0.3]{pictures/G6SteeringWheelV3.pdf}
-		\caption{Concept drawing of steering wheel with display, not final edition}
+    \caption{Concept drawing of steering wheel with display, not final edition}
 	\end{center}
 \end{figure}
 \section{graphical overview}
@@ -95,7 +95,7 @@ The difference between the top and the bottom of the RPM to calculate is diffene
     
 The gear ratios for the CVR600RR engine in shown in table %\vref(tab:gear_ratio) 
 the gear ratio is the number of revolutions the engine take, before the output of the gearcase have taken 1 revolution.
-thereby if the car go up in gear the engine RPM will drop aproximately: \\ \hline (current gearratio - next gear ratio)*current RPM  \\ \hline 
+thereby if the car go up in gear the engine RPM will drop aproximately: \\ (current gearratio - next gear ratio)*current RPM  
 
 \begin{center}
 \footnotesize
